<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 登录页面国际化信息开始 -->
    <string name="app_name">登陆界面</string>
	<string name="login_et_user_name">用户名</string>
    <string name="login_et_user_password">密码</string>
    <string name="login_cb_remember_password">记住密码</string>
    <string name="login_cb_automatic">自动登录</string>
    <string name="login_btn_land">登陆</string>
    <!-- 登录页面国际化信息结束 -->    
    
    <!-- 首页面国际化信息开始 -->
    <string name="home_tv_welcome">欢迎来到首页！</string>
    <string name="home_btn_back">返回</string>
    <!-- 首页面国际化信息开始 -->
</resources>
